[JDK17] All tests pass using JDK17, 8.0.0.GA is really near!